[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultratrace-ulm-pipeline"
version = "0.1.0"
description = "Standalone 3D ULM tracking and viewer tools for beamformed ultratrace data."
requires-python = ">=3.10"
dependencies = [
  "h5py",
  "numpy",
  "scipy",
  "tqdm",
  "truststore",
]

[project.optional-dependencies]
# GPU-only MACH beamforming. Requires a CUDA host; the cupy wheel must match the
# local CUDA toolkit (e.g. cupy-cuda12x). The package imports fine without these.
mach = [
  "torch",
  "mach-beamform",
  "cupy",
]

[project.scripts]
ultratrace-ulm = "ultratrace_ulm.cli:main"

[tool.setuptools.packages.find]
include = ["ultratrace_ulm*"]

[tool.setuptools.package-data]
ultratrace_ulm = ["web/track_viewer/*", "web/volume_viewer/*", "web/launcher/*"]
